<resources>
    <string name="app_name">Team Findus</string>
    <string name="rescanButton">SCAN</string>
    <string name="defaultResults">PRESS SCAN!</string>
    <string name="textview">Default</string>
    <string name="test">LOCATE</string>
    <string name="nav_header_subtitle">Application drawer</string>
    <string name="nav_header_title">Team Findus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">The Localizer</string>
    <string name="menu_calibration">Calibration</string>
    <string name="menu_scanner">The Scanner</string>

    <string name="register_button_text">Register</string>
    <string name="redefine_button_text">Redefine</string>
    <string name="tester">FINDUS</string>
    <string name="self_credit">An Orbital project by \nJasper and Ahmad</string>
    <string name="choose_image">Choose image</string>
    <string name="upload_image">Upload_image</string>
    <string name="start_scan">SCAN!</string>
    <string name="default_bssid">Show BSSIDs  </string>

    <string name="area_map_text">Area Map  :</string>
    <string name="location_text">Location  :</string>
    <string name="store_text">Store  :</string>
    <string name="coord_text">Coordinates  :</string>
    <string name="default_area_map_input">COM 1 Level 2, NUS</string>
    <string name="default_store">Access Points</string>
</resources>
