<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CalibrationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/calibration_main"
    >

    <com.example.findus.ModifiedImageView
        android:id="@+id/calibration_map"
        android:layout_width="326dp"
        android:layout_height="237dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:cropToPadding="true"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.example.findus.ModifiedImageView>

    <View
        android:id="@+id/outline"
        android:layout_width="326dp"
        android:layout_height="237dp"
        android:background="@drawable/outline_rect_calib_map"
        app:layout_constraintBottom_toBottomOf="@+id/calibration_map"
        app:layout_constraintEnd_toEndOf="@+id/calibration_map"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calibration_map" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calibration_map"
        app:layout_constraintTop_toTopOf="@+id/outline" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button_text"
        android:background="@drawable/capsule_button"

        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputAreaMap"
        android:text="@string/default_area_map_input"
        android:inputType="none"
        android:enabled="false"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/outline"
        app:layout_constraintTop_toBottomOf="@+id/outline" />

    <EditText
        android:id="@+id/inputLocation"
        android:text="@string/tester"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/inputAreaMap"
        app:layout_constraintTop_toBottomOf="@+id/inputAreaMap" />

    <AutoCompleteTextView
        android:id="@+id/inputStore"
        android:text=""
        android:autofillHints="@string/default_store"
        android:inputType="none"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"


        app:layout_constraintEnd_toEndOf="@+id/inputLocation"
        app:layout_constraintTop_toBottomOf="@+id/inputLocation" />

    <TextView
        android:id="@+id/labelAreaMap"
        android:layout_width="100sp"
        android:gravity="end"
        android:text="@string/area_map_text"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputAreaMap"
        app:layout_constraintEnd_toStartOf="@+id/inputAreaMap"
        app:layout_constraintStart_toStartOf="@+id/outline"
        app:layout_constraintTop_toTopOf="@+id/inputAreaMap" />

    <TextView
        android:id="@+id/labelLocation"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:text="@string/location_text"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="@+id/inputLocation"
        app:layout_constraintEnd_toEndOf="@+id/labelAreaMap"
        app:layout_constraintStart_toStartOf="@+id/outline"
        app:layout_constraintTop_toTopOf="@+id/inputLocation" />

    <TextView
        android:id="@+id/labelStore"
        android:text="@string/store_text"
        android:gravity="end"
        android:layout_width="100sp"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/inputStore"
        app:layout_constraintEnd_toEndOf="@+id/labelLocation"
        app:layout_constraintStart_toStartOf="@+id/calibration_map"
        app:layout_constraintTop_toTopOf="@+id/inputStore" />

</androidx.constraintlayout.widget.ConstraintLayout>