<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calibration_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScannerActivity">

    <Switch
        android:id="@+id/bssidSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_bssid"
        app:layout_constraintEnd_toEndOf="@+id/scanNow"
        app:layout_constraintStart_toStartOf="@+id/scanNow"
        app:layout_constraintTop_toBottomOf="@+id/scanNow" />

    <Button
        android:id="@+id/scanNow"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/start_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/scanNow"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultsDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultResults" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>